add: sortby and sort_order query added
